@@ -5,6 +5,11 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Fix to RSA private encryption routines: if p < q then it would
+     occasionally produce an invalid result. This will only happen with
+     externally generated keys because OpenSSL (and SSLeay) ensure p > q.
+     [Steve Henson]
+
   *) Be less restrictive and allow also `perl util/perlpath.pl
      /path/to/bin/perl' in addition to `perl util/perlpath.pl /path/to/bin',
      because this way one can also use an interpreter named `perl5' (which is
